# sen-script

./: .gitignore  dev.py  pyproject.toml
src/sen_script/: __init__.py
src/sen_script/cmd_ssh/: __init__.py  copy_id.py  gen_cfg.py
